test/corpus/date.txt
==================
YYYY-MM-DD
==================
2025-07-25

---

(journal
  (journal_item
    (transaction
      (transaction_plain
        (date)))))

==================
YYYY/MM/DD
==================
2025/07/25

---

(journal
  (journal_item
    (transaction
      (transaction_plain
        (date)))))

==================
YYYY.MM.DD
==================
2025.07.25

---

(journal
  (journal_item
    (transaction
      (transaction_plain
        (date)))))

==================
MM-DD
==================
07-25

---

(journal
  (journal_item
    (transaction
      (transaction_plain
        (date)))))

==================
MM/DD
==================
07/25

---

(journal
  (journal_item
    (transaction
      (transaction_plain
        (date)))))

==================
MM.DD
==================
07.25

---

(journal
  (journal_item
    (transaction
      (transaction_plain
        (date)))))

==================
Secondary date
==================
2025-07-25=2025-07-28

---

(journal
  (journal_item
    (transaction
      (transaction_plain
        (date)
        (secondary_date))))

